--- a/Tudo/index.html
+++ b/Tudo/index.html
@@ -21,6 +21,7 @@
                     <h3>Arthur Emmerich Lamas</h3>
                     <p>Apelido: DevAEL</p>
                     <p>Idade: 15 Anos</p>
+                    <p>Estudante de Informática para Internet na Etec de Praia Grande</p>
                 </div>
             </div>
             <div class="col-md-3">
