--- a/Tudo/index.html
+++ b/Tudo/index.html
@@ -52,8 +52,45 @@
                         target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://wa.me/5513991514050?text=Ol%C3%A1%2C%20vi%20seu%20perfil%20e%20gostaria%20de%20conversar."
                         rel="external" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="projetos.html" class="btn btn-outline-secondary" target="_blank" rel="external">Veja Meus Projetos</a>
+                    <a href="projetos.html" class="btn btn-outline-secondary" target="_blank" rel="external">Veja Meus
+                        Projetos</a>
                 </div>
+            </div>
+            <div class="container mt-5">
+                <div class="cart2">
+                    <h2 class="text-center mb-4">Minhas Habilidades Técnicas</h2>
+                    <div class="mb-3">
+                        <div class="d-flex justify-content-between">
+                            <p class="h5">HTML5</p>
+                            <p>60%</p>
+                        </div>
+                        <div class="progress" role="progressbar" aria-label="Nível de HTML" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 60%; background-color: orangered;"></div>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <div class="d-flex justify-content-between">
+                            <p class="h5">CSS3 & Bootstrap</p>
+                            <p>50%</p>
+                        </div>
+                        <div class="progress" role="progressbar" aria-label="Nível de CSS" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar bg-info" style="width: 50%"></div>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <div class="d-flex justify-content-between">
+                            <p class="h5">JavaScript (JS)</p>
+                            <p>20%</p>
+                        </div>
+                        <div class="progress" role="progressbar" aria-label="Nível de JavaScript" aria-valuenow="20"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar bg-warning" style="width: 20%"></div>
+                        </div>
+                </div>
+                </div>
+
             </div>
         </div>
     </div>
