--- a/Tudo/index.html
+++ b/Tudo/index.html
@@ -56,8 +56,8 @@
                         Projetos</a>
                 </div>
             </div>
-            <div class="container mt-5">
-                <div class="cart2">
+            <div class="col-md-3">
+                <div class="cart2" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <h2 class="text-center mb-4">Minhas Habilidades Técnicas</h2>
                     <div class="mb-3">
                         <div class="d-flex justify-content-between">
@@ -88,21 +88,19 @@
                             aria-valuemin="0" aria-valuemax="100">
                             <div class="progress-bar bg-warning" style="width: 20%"></div>
                         </div>
+                    </div>
                 </div>
-                </div>
-
             </div>
         </div>
-    </div>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://kit.fontawesome.com/dd1d2b7bc0.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
-    <script>
-        AOS.init();
-    </script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://kit.fontawesome.com/dd1d2b7bc0.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+            crossorigin="anonymous"></script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 
 </html>
